// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render children 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Inter_500Medium",
          "fontSize": 17,
          "lineHeight": 18,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Button
  </Text>
  <Text>
    i'm Button
  </Text>
</View>
`;

exports[`Button Component should render correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Inter_500Medium",
          "fontSize": 17,
          "lineHeight": 18,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Button
  </Text>
</View>
`;

exports[`Button Component should render icon button correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <Image
    source={
      Object {
        "process": [Function],
      }
    }
    style={Object {}}
  />
  <Text
    style={
      Array [
        Object {
          "color": "#fff",
          "fontFamily": "Inter_500Medium",
          "fontSize": 17,
          "lineHeight": 18,
          "textAlign": "center",
        },
        undefined,
      ]
    }
  >
    Button
  </Text>
</View>
`;
